2002-03-25  Martin Baulig  <martin@gnome.org>

	* MonoDwarfFileWriter.cs (CreateType): Return a `DieType'.
	(RegisterType): Add the type to the type hash before creating dependency types
	so we don't get recursion loops.
	(RegisterPointerType): New func to register a "pointer to type" type.
	(DieTypeDef, DiePointerType, DieArrayType, DieStringType, DieClassType): New
	types; added support for strings, arrays and basic support for classes.
	
2002-03-24  Martin Baulig  <martin@gnome.org>

	* IMonoSymbolWriter.cs: Killed all methods in this interface, no longer needed.

	* MonoSymbolWriter.cs (MonoSymbolWriter): The constructor now takes a string
	argument which is the full pathname of the assembly - you must call Close()
	after the assembly has been written to disk since the symbol writer needs to
	load the finished assembly to get its metadata.

	* MonoDwarfFileWriter.cs: Added support for enums and structs.
	
2002-03-24  Martin Baulig  <martin@gnome.org>

	* MonoDwarfFileWriter.cs: Added support for method parameters.

2002-03-24  Martin Baulig  <martin@gnome.org>

	* IMonoSymbolWriter.cs (IMonoSymbolWriter): Removed my custom OpenMethod(),
	we're now using the ISymbolWriter's method.
	(IVariable): Added `byte[] Signature' property.

	* MonoSymbolWriter.cs (SetAssembly): New method. This must be called before
	Close(); the assembly parameter is the already-written assembly, ie. it must
	contain the full metadata.
	(OpenMethod): Only take the token argument and set MethodInfo later in DoFixups.
	(SetMethodSourceRange): You must call this function to tell the symbol writer
	in which source file the method is defined.
	(DefineLocal): Store the signature in the local.
	(DoFixups): Use two new interncalls to set the SourceMethod's MethodInfo field
	and the LocalVariable's Type field.

2002-03-23  Martin Baulig  <martin@gnome.org>

	* IMonoSymbolWriter.cs (ISourceBlock): New interface.
	(ILocalVariable): Renamed this interface to IVariable.