@@ -35,36 +35,85 @@ namespace Mono.CSharp.Debugger
 
 		public int WriteLabel ()
 		{
-			int index = GetNextLabelIndex ();
+			int index = ++next_anon_label_idx;
 
 			WriteLabel (index);
 
 			return index;
 		}
 
-		public string GetLabelName (int index)
-		{
-			return index.ToString ();
-		}
-
 		public void WriteLabel (int index)
 		{
-			WriteLabel (GetLabelName (index));
+			char[] output = { '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  ':', '\n' };
+
+			unchecked {
+				int value = (int) index;
+				output [3] = hex [(value & 0xf00000) >> 20];
+				output [4] = hex [(value & 0x0f0000) >> 16];
+				output [5] = hex [(value & 0x00f000) >> 12];
+				output [6] = hex [(value & 0x000f00) >>  8];
+				output [7] = hex [(value & 0x0000f0) >>  4];
+				output [8] = hex [(value & 0x00000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
+
+		private static readonly char[] hex = { '0', '1', '2', '3', '4', '5', '6', '7',
+						       '8', '9', 'a', 'b', 'c', 'd', 'e', 'f' };
 
 		public void WriteUInt8 (bool value)
 		{
-			writer.WriteLine ("\t.byte\t\t" + (value ? 1 : 0));
+			WriteUInt8 (value ? 1 : 0);
 		}
 
 		public void WriteUInt8 (int value)
 		{
-			writer.WriteLine ("\t.byte\t\t" + value);
+			char[] output = { '\t', '.', 'b', 'y', 't', 'e', '\t', '\t',
+					  '0', 'x', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				output [10] = hex [(value & 0xf0) >> 4];
+				output [11] = hex [value & 0x0f];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
 		public void WriteInt8 (int value)
 		{
-			writer.WriteLine ("\t.byte\t\t" + value);
+			char[] output = { '\t', '.', 'b', 'y', 't', 'e', '\t', '\t',
+					  '0', 'x', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				uint uvalue = (uint) value;
+				output [10] = hex [(uvalue & 0xf0) >> 4];
+				output [11] = hex [uvalue & 0x0f];
+			}
+
+			writer.Write (output, 0, output.Length);
+		}
+
+		public void Write2Bytes (int a, int b)
+		{
+			char[] output = { '\t', '.', 'b', 'y', 't', 'e', '\t', '\t',
+					  '0', 'x', '\0', '\0', ',', ' ',
+					  '0', 'x', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				uint ua = (uint) a;
+				uint ub = (uint) b;
+				output [10] = hex [(ua & 0xf0) >> 4];
+				output [11] = hex [ua & 0x0f];
+				output [16] = hex [(ub & 0xf0) >> 4];
+				output [17] = hex [ub & 0x0f];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
 		public void WriteUInt16 (int value)
@@ -79,12 +128,43 @@ namespace Mono.CSharp.Debugger
 
 		public void WriteUInt32 (int value)
 		{
-			writer.WriteLine ("\t.long\t\t" + value);
+			char[] output = { '\t', '.', 'l', 'o', 'n', 'g', '\t', '\t',
+					  '0', 'x', '\0', '\0', '\0', '\0', '\0', '\0',
+					  '\0', '\0', '\n' };
+
+			unchecked {
+				output [10] = hex [(value & 0xf0000000) >> 28];
+				output [11] = hex [(value & 0x0f000000) >> 24];
+				output [12] = hex [(value & 0x00f00000) >> 20];
+				output [13] = hex [(value & 0x000f0000) >> 16];
+				output [14] = hex [(value & 0x0000f000) >> 12];
+				output [15] = hex [(value & 0x00000f00) >>  8];
+				output [16] = hex [(value & 0x000000f0) >>  4];
+				output [17] = hex [(value & 0x0000000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
 		public void WriteInt32 (int value)
 		{
-			writer.WriteLine ("\t.long\t\t" + value);
+			char[] output = { '\t', '.', 'l', 'o', 'n', 'g', '\t', '\t',
+					  '0', 'x', '\0', '\0', '\0', '\0', '\0', '\0',
+					  '\0', '\0', '\n' };
+
+			unchecked {
+				uint uvalue = (uint) value;
+				output [10] = hex [(uvalue & 0xf0000000) >> 28];
+				output [11] = hex [(uvalue & 0x0f000000) >> 24];
+				output [12] = hex [(uvalue & 0x00f00000) >> 20];
+				output [13] = hex [(uvalue & 0x000f0000) >> 16];
+				output [14] = hex [(uvalue & 0x0000f000) >> 12];
+				output [15] = hex [(uvalue & 0x00000f00) >>  8];
+				output [16] = hex [(uvalue & 0x000000f0) >>  4];
+				output [17] = hex [(uvalue & 0x0000000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
 		public void WriteSLeb128 (int value)
@@ -99,7 +179,10 @@ namespace Mono.CSharp.Debugger
 
 		public void WriteAddress (int value)
 		{
-			writer.WriteLine ("\t.long\t\t" + value);
+			if (value == 0)
+				writer.WriteLine ("\t.long\t\t0");
+			else
+				writer.WriteLine ("\t.long\t\t" + value);
 		}
 
 		public void WriteString (string value)
@@ -117,14 +200,56 @@ namespace Mono.CSharp.Debugger
 			writer.WriteLine ("\t.previous\n");
 		}
 
-		public void WriteRelativeOffset (string start_label, string end_label)
+		public void WriteRelativeOffset (int start_label, int end_label)
 		{
-			writer.WriteLine ("\t.long\t\t.L_" + end_label + " - .L_" + start_label);
+			char[] output = { '\t', '.', 'l', 'o', 'n', 'g', '\t', '\t',
+					  '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  ' ', '-', ' ',
+					  '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				output [11] = hex [(end_label & 0xf00000) >> 20];
+				output [12] = hex [(end_label & 0x0f0000) >> 16];
+				output [13] = hex [(end_label & 0x00f000) >> 12];
+				output [14] = hex [(end_label & 0x000f00) >>  8];
+				output [15] = hex [(end_label & 0x0000f0) >>  4];
+				output [16] = hex [(end_label & 0x00000f)];
+				output [23] = hex [(start_label & 0xf00000) >> 20];
+				output [24] = hex [(start_label & 0x0f0000) >> 16];
+				output [25] = hex [(start_label & 0x00f000) >> 12];
+				output [26] = hex [(start_label & 0x000f00) >>  8];
+				output [27] = hex [(start_label & 0x0000f0) >>  4];
+				output [28] = hex [(start_label & 0x00000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
-		public void WriteShortRelativeOffset (string start_label, string end_label)
+		public void WriteShortRelativeOffset (int start_label, int end_label)
 		{
-			writer.WriteLine ("\t.byte\t\t.L_" + end_label + " - .L_" + start_label);
+			char[] output = { '\t', '.', 'b', 'y', 't', 'e', '\t', '\t',
+					  '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  ' ', '-', ' ',
+					  '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				output [11] = hex [(end_label & 0xf00000) >> 20];
+				output [12] = hex [(end_label & 0x0f0000) >> 16];
+				output [13] = hex [(end_label & 0x00f000) >> 12];
+				output [14] = hex [(end_label & 0x000f00) >>  8];
+				output [15] = hex [(end_label & 0x0000f0) >>  4];
+				output [16] = hex [(end_label & 0x00000f)];
+				output [23] = hex [(start_label & 0xf00000) >> 20];
+				output [24] = hex [(start_label & 0x0f0000) >> 16];
+				output [25] = hex [(start_label & 0x00f000) >> 12];
+				output [26] = hex [(start_label & 0x000f00) >>  8];
+				output [27] = hex [(start_label & 0x0000f0) >>  4];
+				output [28] = hex [(start_label & 0x00000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
 		}
 
 		public void WriteAbsoluteOffset (string label)
@@ -132,12 +257,31 @@ namespace Mono.CSharp.Debugger
 			writer.WriteLine ("\t.long\t\t.L_" + label);
 		}
 
+		public void WriteAbsoluteOffset (int index)
+		{
+			char[] output = { '\t', '.', 'l', 'o', 'n', 'g', '\t', '\t',
+					  '.', 'L', '_', '\0', '\0', '\0', '\0', '\0', '\0',
+					  '\n' };
+
+			unchecked {
+				output [11] = hex [(index & 0xf00000) >> 20];
+				output [12] = hex [(index & 0x0f0000) >> 16];
+				output [13] = hex [(index & 0x00f000) >> 12];
+				output [14] = hex [(index & 0x000f00) >>  8];
+				output [15] = hex [(index & 0x0000f0) >>  4];
+				output [16] = hex [(index & 0x00000f)];
+			}
+
+			writer.Write (output, 0, output.Length);
+
+		}
+
 		public object StartSubsectionWithSize ()
 		{
-			int start_index = GetNextLabelIndex ();
-			int end_index = GetNextLabelIndex ();
+			int start_index = ++next_anon_label_idx;
+			int end_index = ++next_anon_label_idx;
 
-			WriteRelativeOffset (GetLabelName (start_index), GetLabelName (end_index));
+			WriteRelativeOffset (start_index, end_index);
 			WriteLabel (start_index);
 
 			return end_index;
@@ -145,10 +289,10 @@ namespace Mono.CSharp.Debugger
 
 		public object StartSubsectionWithShortSize ()
 		{
-			int start_index = GetNextLabelIndex ();
-			int end_index = GetNextLabelIndex ();
+			int start_index = ++next_anon_label_idx;
+			int end_index = ++next_anon_label_idx;
 
-			WriteShortRelativeOffset (GetLabelName (start_index), GetLabelName (end_index));
+			WriteShortRelativeOffset (start_index, end_index);
 			WriteLabel (start_index);
 
 			return end_index;
@@ -160,4 +304,3 @@ namespace Mono.CSharp.Debugger
 		}
 	}
 }
-
