@@ -1,3 +1,12 @@
+2002-03-29  Martin Baulig  <martin@gnome.org>
+
+	* AssemblerWriterI386.cs: Rewrote most of the string output function, do the
+	number->string conversion manually. It's now taking about 15 seconds to write
+	a symbol file for MCS, no longer more than a minute.
+
+	* MonoDwarfFileWriter.cs: Added some profiling code, speeded things up, fixed
+	a few bugs.
+
 2002-03-25  Martin Baulig  <martin@gnome.org>
 
 	* MonoDwarfFileWriter.cs (CreateType): Return a `DieType'.
